--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,26 @@
 spring.application.name=backend
-?
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/cohort47project
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+#Mail
+spring.mail.username=cohort47project@gmail.com
+spring.mail.password=cohort47@2024
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# Server
+server.port=8080
+
+#Docker
+spring.docker.compose.enabled=false
