--- a/src/main/resources/mail/application.yml
+++ b/src/main/resources/mail/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/backend
     username: root
-    password: aL77245
+    password: 1111
   jpa:
     hibernate:
       ddl-auto: update
