--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/cohort47project
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3307/berliner_tour
+spring.datasource.username=ros
 spring.datasource.password=1111
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
