--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=backend
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/cohort47project
+spring.datasource.url=jdbc:mysql://localhost:3306/berliner_tour
 spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.password=aL77245
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
