--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Mail
 spring.mail.username=cohort47project@gmail.com
