--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ server.port=8080
 
 #Docker
 spring.docker.compose.enabled=false
+
+#JWT
+jwt.secret=984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723ga
+jwt.expiration-time=10000000
