--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
         <version>4.29.2</version>
     </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.572</version>
+        </dependency>
+
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-docker-compose</artifactId>
