--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,7 +28,7 @@ spring.docker.compose.enabled=false
 
 #JWT
 jwt.secret=984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723ga
-jwt.expiration-time=100000
+jwt.expiration-time=1000000000
 
 #AWS
 aws.s3.access-key=your-access-key
